--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>Squadpage</title>
 </head>
+
 <body>
-    blablablala
+    <header>
+        <h1> Jaarboek 1E</h1>
+    </header>
+    <main>
+        <article>
+            <div class="bg">
+                <div class="foto" />
+            </div>
+            <div class="quote">
+                <h2>naam</h2>
+                <p>quote</p>
+            </div>
+        </article>
+    </main>
 </body>
+
 </html>
