--- a/index.html
+++ b/index.html
@@ -14,14 +14,60 @@
     </header>
     <main>
         <article>
-            <div class="bg">
-                <div class="foto" />
-            </div>
-            <div class="quote">
-                <h2>naam</h2>
-                <p>quote</p>
+            <div class="content">
+                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="text">
+                    <h3> Abeer </h3>
+                    <p> Whatever you are, be a good one.</p>
+                </div>
             </div>
         </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="text">
+                    <h3> Akiko </h3>
+                    <p> Life is like a box of chocolates, you never know what you get.</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="text">
+                    <h3> Anna-Kyra </h3>
+                    <p> A day without sunshine is like, you know night.</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="text">
+                    <h3> naam </h3>
+                    <p> Quote</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="text">
+                    <h3> naam </h3>
+                  <p> quote</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="text">
+                    <h3> naam </h3>
+                    <p> Quote</p>
+                </div>
+            </div>
+        </article>
+
     </main>
 </body>
 
