--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="content">
                 <div class="foto"> <img src="assets/dummy.jfif"> </div>
                 <div class="text">
-                    <h3> naam </h3>
-                    <p> Quote</p>
+                    <h3> Christopher </h3>
+                    <p> Controversieel quote.</p>
                 </div>
             </div>
         </article>
@@ -53,8 +53,8 @@
             <div class="content">
                 <div class="foto"> <img src="assets/dummy.jfif"> </div>
                 <div class="text">
-                    <h3> naam </h3>
-                  <p> quote</p>
+                    <h3> Damien </h3>
+                    <p> Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters.</p>
                 </div>
             </div>
         </article>
@@ -62,8 +62,8 @@
             <div class="content">
                 <div class="foto"> <img src="assets/dummy.jfif"> </div>
                 <div class="text">
-                    <h3> naam </h3>
-                    <p> Quote</p>
+                    <h3> Hadil </h3>
+                    <p> When you turn and face the sunshine all the shadows fall behind you.</p>
                 </div>
             </div>
         </article>
