--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <div class="content">
-                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="foto"> <img src="assets/Schetsen/png/Abeer.png"> </div>
                 <div class="text">
                     <h3> Abeer </h3>
                     <p> Whatever you are, be a good one.</p>
@@ -24,7 +24,7 @@
         </article>
         <article>
             <div class="content">
-                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="foto"> <img src="assets/Schetsen/png/Akiko.png"> </div>
                 <div class="text">
                     <h3> Akiko </h3>
                     <p> Life is like a box of chocolates, you never know what you get.</p>
@@ -33,7 +33,7 @@
         </article>
         <article>
             <div class="content">
-                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="foto"> <img src="assets/Schetsen/png/Anna-Kyra.png"> </div>
                 <div class="text">
                     <h3> Anna-Kyra </h3>
                     <p> A day without sunshine is like, you know night.</p>
@@ -42,7 +42,7 @@
         </article>
         <article>
             <div class="content">
-                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="foto"> <img src="assets/Schetsen/png/Christopher.png"> </div>
                 <div class="text">
                     <h3> Christopher </h3>
                     <p> Controversieel quote.</p>
@@ -51,16 +51,16 @@
         </article>
         <article>
             <div class="content">
-                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="foto"> <img src="assets/Schetsen/png/Damian.png"> </div>
                 <div class="text">
-                    <h3> Damien </h3>
+                    <h3> Damian </h3>
                     <p> Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters.</p>
                 </div>
             </div>
         </article>
         <article>
             <div class="content">
-                <div class="foto"> <img src="assets/dummy.jfif"> </div>
+                <div class="foto"> <img src="assets/Schetsen/png/Hadil.png"> </div>
                 <div class="text">
                     <h3> Hadil </h3>
                     <p> When you turn and face the sunshine all the shadows fall behind you.</p>
