einde schooldag_update

--- a/index.html
+++ b/index.html
@@ -42,10 +42,37 @@
         </article>
         <article>
             <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Annelinde.png"> </div>
+                <div class="text">
+                    <h3> Annelinde </h3>
+                    <p> Life has no ctrl+z</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Charley.png"> </div>
+                <div class="text">
+                    <h3> Charley </h3>
+                    <p> </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
                 <div class="foto"> <img src="assets/Schetsen/png/Christopher.png"> </div>
                 <div class="text">
-                    <h3> Christopher </h3>
+                    <h3> christopher </h3>
                     <p> Controversieel quote.</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Cyd.png"> </div>
+                <div class="text">
+                    <h3> Cyd </h3>
+                    <p> </p>
                 </div>
             </div>
         </article>
@@ -54,7 +81,16 @@
                 <div class="foto"> <img src="assets/Schetsen/png/Damian.png"> </div>
                 <div class="text">
                     <h3> Damian </h3>
-                    <p> Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters.</p>
+                    <p> Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Gita.png"> </div>
+                <div class="text">
+                    <h3> Gita </h3>
+                    <p> There is no sunrise so beautiful that it is worth waking me up to see it. </p>
                 </div>
             </div>
         </article>
@@ -63,11 +99,19 @@
                 <div class="foto"> <img src="assets/Schetsen/png/Hadil.png"> </div>
                 <div class="text">
                     <h3> Hadil </h3>
-                    <p> When you turn and face the sunshine all the shadows fall behind you.</p>
+                    <p> When you turn and face the sunshine all the shadows fall behind you. </p>
                 </div>
             </div>
         </article>
-
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Inez.png"> </div>
+                <div class="text">
+                    <h3> Inez </h3>
+                    <p> My mind is like my browser, 19 tabs open and i have no idea where the music is coming from. </p>
+                </div>
+            </div>
+        </article>
     </main>
 </body>
 
