--- a/index.html
+++ b/index.html
@@ -112,6 +112,132 @@
                 </div>
             </div>
         </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Jason.png"> </div>
+                <div class="text">
+                    <h3> Jason </h3>
+                    <p> They ain`t believe in us. GOD DID. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Jesse.png"> </div>
+                <div class="text">
+                    <h3> Jesse </h3>
+                    <p> Geloof in jezelf </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Justin.png"> </div>
+                <div class="text">
+                    <h3> Justin </h3>
+                    <p> Learn to love the darkness so we can see ourselves in the light. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Kaan.png"> </div>
+                <div class="text">
+                    <h3> Kaan </h3>
+                    <p> The world keeps getting hotter, But im too cool to die. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Krijn.png"> </div>
+                <div class="text">
+                    <h3> Krijn </h3>
+                    <p> </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Lemuel.png"> </div>
+                <div class="text">
+                    <h3> Lemuel </h3>
+                    <p> I think we all change each other`s path. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Lisa.png"> </div>
+                <div class="text">
+                    <h3> Lisa </h3>
+                    <p> Live Love Laugh </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Metehan.png"> </div>
+                <div class="text">
+                    <h3> Metehan </h3>
+                    <p> Today is your chance to build tomorrow </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Misah.png"> </div>
+                <div class="text">
+                    <h3> Misah </h3>
+                    <p> Clients are the difference between design and art. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Nevayo.png"> </div>
+                <div class="text">
+                    <h3> Nevayo </h3>
+                    <p> It`s not about whether i can. I have to do it. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Patrick.png"> </div>
+                <div class="text">
+                    <h3> Patrick </h3>
+                    <p> Home is where the heart is. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Robby.png"> </div>
+                <div class="text">
+                    <h3> Robby </h3>
+                    <p> I never sleep, cause sleep is the cousin of death. </p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/Ronaldo.png"> </div>
+                <div class="text">
+                    <h3> Ronaldo </h3>
+                    <p> I prefer to reserve time.</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <div class="foto"> <img src="assets/Schetsen/png/viktor.png"> </div>
+                <div class="text">
+                    <h3> Viktor </h3>
+                    <p> If you can make her giggle, you can make her cake jiggle. </p>
+                </div>
+            </div>
+        </article>
     </main>
 </body>
 
