--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
+                    <div class="foto"> <img src="#"> </div>
+                    <div class="text">
+                        <h3> Danique </h3>
+                        <p> Hier komt een quote. </p>
+                    </div>
+                </a>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <a href="#" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Gita.png"> </div>
                     <div class="text">
                         <h3> Gita </h3>
@@ -225,7 +236,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://misahsaid.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Misah.png"> </div>
                     <div class="text">
                         <h3> Misah </h3>
