--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://ovenmagnetron.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Jesse.png"> </div>
                     <div class="text">
                         <h3> Jesse </h3>
