--- a/index.html
+++ b/index.html
@@ -5,300 +5,248 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title> Squadpage </title>
+    <title>Squadpage</title>
 </head>
 
 <body>
     <header>
-        <h1> Jaarboek 1E</h1>
+        <h1>Jaarboek 1E</h1>
     </header>
     <main>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Abeer.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Abeer.png"></div>
                     <div class="text">
-                        <h3> Abeer </h3>
-                        <p> Whatever you are, be a good one.</p>
+                        <h3>Abeer</h3>
+                        <p>Whatever you are, be a good one.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="https://akikosophia.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Akiko.png"> </div>
+            <div class="content"><a href="https://akikosophia.github.io/your-tribe-profile-card/" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Akiko.png"></div>
                     <div class="text">
-                        <h3> Akiko </h3>
-                        <p> Life is like a box of chocolates, you never know what you get.</p>
+                        <h3>Akiko</h3>
+                        <p>Life is like a box of chocolates, you never know what you get.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="https://anna-kyra.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Anna-Kyra.png"> </div>
+            <div class="content"><a href="https://anna-kyra.github.io/your-tribe-profile-card/" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Anna-Kyra.png"></div>
                     <div class="text">
-                        <h3> Anna-Kyra </h3>
-                        <p> A day without sunshine is like, you know night.</p>
+                        <h3>Anna-Kyra</h3>
+                        <p>A day without sunshine is like, you know night.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Annelinde.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Annelinde.png"></div>
                     <div class="text">
-                        <h3> Annelinde </h3>
-                        <p> Life has no ctrl+z</p>
+                        <h3>Annelinde</h3>
+                        <p>Life has no ctrl+z</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Charley.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Charley.png"></div>
                     <div class="text">
-                        <h3> Charley </h3>
-                        <p> Hier komt een quote. </p>
+                        <h3>Charley</h3>
+                        <p>Hier komt een quote.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Christopher.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Christopher.png"></div>
                     <div class="text">
-                        <h3> christopher </h3>
-                        <p> Controversieel quote.</p>
+                        <h3>christopher</h3>
+                        <p>Controversieel quote.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Cyd.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Cyd.png"></div>
                     <div class="text">
-                        <h3> Cyd </h3>
-                        <p> Hier komt een quote. </p>
+                        <h3>Cyd</h3>
+                        <p>Hier komt een quote.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Damian.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Damian.png"></div>
                     <div class="text">
-                        <h3> Damian </h3>
-                        <p> Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters. </p>
+                        <h3>Damian</h3>
+                        <p>Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="#"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="#"></div>
                     <div class="text">
-                        <h3> Danique </h3>
-                        <p> Hier komt een quote. </p>
+                        <h3>Danique</h3>
+                        <p>Hier komt een quote.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Gita.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Gita.png"></div>
                     <div class="text">
-                        <h3> Gita </h3>
-                        <p> There is no sunrise so beautiful that it is worth waking me up to see it. </p>
+                        <h3>Gita</h3>
+                        <p>There is no sunrise so beautiful that it is worth waking me up to see it.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Hadil.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Hadil.png"></div>
                     <div class="text">
-                        <h3> Hadil </h3>
-                        <p> When you turn and face the sunshine all the shadows fall behind you. </p>
+                        <h3>Hadil</h3>
+                        <p>When you turn and face the sunshine all the shadows fall behind you.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Inez.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Inez.png"></div>
                     <div class="text">
-                        <h3> Inez </h3>
-                        <p> My mind is like my browser, 19 tabs open and i have no idea where the music is coming from.
+                        <h3>Inez</h3>
+                        <p>My mind is like my browser, 19 tabs open and i have no idea where the music is coming from.
                         </p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Jason.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Jason.png"></div>
                     <div class="text">
-                        <h3> Jason </h3>
-                        <p> They ain`t believe in us. GOD DID. </p>
+                        <h3>Jason</h3>
+                        <p>They ain`t believe in us. GOD DID.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Jesse.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Jesse.png"></div>
                     <div class="text">
-                        <h3> Jesse </h3>
-                        <p> Geloof in jezelf </p>
+                        <h3>Jesse</h3>
+                        <p>Geloof in jezelf</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Justin.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Justin.png"></div>
                     <div class="text">
-                        <h3> Justin </h3>
-                        <p> Learn to love the darkness so we can see ourselves in the light. </p>
+                        <h3>Justin</h3>
+                        <p>Learn to love the darkness so we can see ourselves in the light.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="https://kaankalmi.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Kaan.png"> </div>
+            <div class="content"><a href="https://kaankalmi.github.io/your-tribe-profile-card/" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Kaan.png"></div>
                     <div class="text">
-                        <h3> Kaan </h3>
-                        <p> The world keeps getting hotter, But im too cool to die. </p>
+                        <h3>Kaan</h3>
+                        <p>The world keeps getting hotter, But im too cool to die.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Krijn.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Krijn.png"></div>
                     <div class="text">
-                        <h3> Krijn </h3>
-                        <p> Hier komt een quote </p>
+                        <h3>Krijn</h3>
+                        <p>Hier komt een quote</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Lemuel.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Lemuel.png"></div>
                     <div class="text">
-                        <h3> Lemuel </h3>
-                        <p> I think we all change each other`s path. </p>
+                        <h3>Lemuel</h3>
+                        <p>I think we all change each other`s path.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Lisa.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Lisa.png"></div>
                     <div class="text">
-                        <h3> Lisa </h3>
-                        <p> Live Love Laugh </p>
+                        <h3>Lisa</h3>
+                        <p>Live Love Laugh</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Metehan.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Metehan.png"></div>
                     <div class="text">
-                        <h3> Metehan </h3>
-                        <p> Today is your chance to build tomorrow </p>
+                        <h3>Metehan</h3>
+                        <p>Today is your chance to build tomorrow</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="https://misahsaid.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Misah.png"> </div>
+            <div class="content"><a href="https://misahsaid.github.io/your-tribe-profile-card/" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Misah.png"></div>
                     <div class="text">
-                        <h3> Misah </h3>
-                        <p> Clients are the difference between design and art. </p>
+                        <h3>Misah</h3>
+                        <p>Clients are the difference between design and art.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="https://vayogj.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Nevayo.png"> </div>
+            <div class="content"><a href="https://vayogj.github.io/your-tribe-profile-card/" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Nevayo.png"></div>
                     <div class="text">
-                        <h3> Nevayo </h3>
-                        <p> It`s not about whether i can. I have to do it. </p>
+                        <h3>Nevayo</h3>
+                        <p>It`s not about whether i can. I have to do it.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Patrick.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Patrick.png"></div>
                     <div class="text">
-                        <h3> Patrick </h3>
-                        <p> Home is where the heart is. </p>
+                        <h3>Patrick</h3>
+                        <p>Home is where the heart is.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Robby.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Robby.png"></div>
                     <div class="text">
-                        <h3> Robby </h3>
-                        <p> I never sleep, cause sleep is the cousin of death. </p>
+                        <h3>Robby</h3>
+                        <p>I never sleep, cause sleep is the cousin of death.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Ronaldo.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Ronaldo.png"></div>
                     <div class="text">
-                        <h3> Ronaldo </h3>
-                        <p> I prefer to reserve time.</p>
+                        <h3>Ronaldo</h3>
+                        <p>I prefer to reserve time.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
         <article>
-            <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/viktor.png"> </div>
+            <div class="content"><a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/viktor.png"></div>
                     <div class="text">
-                        <h3> Viktor </h3>
-                        <p> If you can make her giggle, you can make her cake jiggle. </p>
+                        <h3>Viktor</h3>
+                        <p>If you can make her giggle, you can make her cake jiggle.</p>
                     </div>
-                </a>
-            </div>
+                </a></div>
         </article>
     </main>
 </body>
