--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </a></div>
         </article>
         <article>
-            <div class="content"><a href="#" target="_blank">
+            <div class="content"><a href="https://ovenmagnetron.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Jesse.png"></div>
                     <div class="text">
                         <h3>Jesse</h3>
