--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </a> </div>
         </article>
         <article>
-            <div class="content"> <a href="#" target="_blank">
+            <div class="content"> <a href="https://hadil24a.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Hadil.png"></div>
                     <div class="text">
                         <h3>Hadil</h3>
@@ -184,7 +184,7 @@
                 </a> </div>
         </article>
         <article>
-            <div class="content"> <a href="#" target="_blank">
+            <div class="content"> <a href="https://metehan2003.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Metehan.png"></div>
                     <div class="text">
                         <h3>Metehan</h3>
