--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://cydstumpel.nl" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Cyd.png"> </div>
                     <div class="text">
                         <h3> Cyd </h3>
@@ -104,7 +104,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="#"> </div>
+                    <div class="foto"> <img src="assets/Schetsen/png/danique.png"> </div>
                     <div class="text">
                         <h3> Danique </h3>
                         <p> Hier komt een quote. </p>
@@ -137,7 +137,18 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Inez.png"> </div>
+                    <div class="foto"> <img src="assets/Schetsen/png/Ilona.png"> </div>
+                    <div class="text">
+                        <h3> Ilona </h3>
+                        <p> Hier komt een quote. </p>
+                    </div>
+                </a>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <a href="#" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Inez_2.png"> </div>
                     <div class="text">
                         <h3> Inez </h3>
                         <p> My mind is like my browser, 19 tabs open and i have no idea where the music is coming from.
@@ -186,6 +197,17 @@
                     <div class="text">
                         <h3> Kaan </h3>
                         <p> The world keeps getting hotter, But im too cool to die. </p>
+                    </div>
+                </a>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <a href="https://krijnhoetmer.github.io/fdnd-your-tribe-profile-card/" target="_blank">
+                    <div class="foto"> <img src="assets/Schetsen/png/Kiko.png"> </div>
+                    <div class="text">
+                        <h3> Kiko </h3>
+                        <p> Hier komt een quote. </p>
                     </div>
                 </a>
             </div>
