--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="foto"> <img src="assets/Schetsen/png/Charley.png"> </div>
                     <div class="text">
                         <h3> Charley </h3>
-                        <p> Hier komt een quote. </p>
+                        <p> Professional Photographer </p>
                     </div>
                 </a>
             </div>
@@ -85,7 +85,7 @@
                     <div class="foto"> <img src="assets/Schetsen/png/Cyd.png"> </div>
                     <div class="text">
                         <h3> Cyd </h3>
-                        <p> Hier komt een quote. </p>
+                        <p> Jury at Awwwards </p>
                     </div>
                 </a>
             </div>
@@ -140,7 +140,7 @@
                     <div class="foto"> <img src="assets/Schetsen/png/Ilona.png"> </div>
                     <div class="text">
                         <h3> Ilona </h3>
-                        <p> Hier komt een quote. </p>
+                        <p> Where`s Waldo? </p>
                     </div>
                 </a>
             </div>
@@ -207,7 +207,7 @@
                     <div class="foto"> <img src="assets/Schetsen/png/Kiko.png"> </div>
                     <div class="text">
                         <h3> Kiko </h3>
-                        <p> Hier komt een quote. </p>
+                        <p> Where`s Waldo? </p>
                     </div>
                 </a>
             </div>
@@ -218,7 +218,7 @@
                     <div class="foto"> <img src="assets/Schetsen/png/Krijn.png"> </div>
                     <div class="text">
                         <h3> Krijn </h3>
-                        <p> Hier komt een quote </p>
+                        <p> Semantic HTML is life </p>
                     </div>
                 </a>
             </div>
