--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://annelinderaadsheer.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Annelinde.png"> </div>
                     <div class="text">
                         <h3> Annelinde </h3>
@@ -114,7 +114,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://gitazeinstra.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Gita.png"> </div>
                     <div class="text">
                         <h3> Gita </h3>
@@ -125,7 +125,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://hadil24a.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Hadil.png"> </div>
                     <div class="text">
                         <h3> Hadil </h3>
@@ -247,7 +247,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://metehan2003.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Metehan.png"> </div>
                     <div class="text">
                         <h3> Metehan </h3>
@@ -302,7 +302,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://ronabundy1.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Ronaldo.png"> </div>
                     <div class="text">
                         <h3> Ronaldo </h3>
