--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://christoph3r3w.github.io/your-tribe-css-basics/#middle" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Christopher.png"> </div>
                     <div class="text">
                         <h3> christopher </h3>
