--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <header>
+    <nav>
         <h1> Jaarboek 1E</h1>
-    </header>
+    </nav>
     <main>
         <article>
             <div class="content">
@@ -159,7 +159,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://jason2426.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Jason.png"> </div>
                     <div class="text">
                         <h3> Jason </h3>
