--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <div class="content">
-                <a href="#https://abeeryu.github.io/your-tribe-profile-card/ " target="_blank">
+                <a href="https://abeeryu.github.io/your-tribe-profile-card/ " target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Abeer.png"> </div>
                     <div class="text">
                         <h3> Abeer </h3>
@@ -170,7 +170,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="https://ovenmagnetron.github.io/your-tribe-profile-card/ " target="_blank">
+                <a href="https://ovenmagnetron.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Jesse.png"> </div>
                     <div class="text">
                         <h3> Jesse </h3>
