lisa en damian visitekaartje
Co-Authored-By: VayoGJ <144008258+vayogj@users.noreply.github.com>
Co-Authored-By: Akikosophia <144008863+akikosophia@users.noreply.github.com>
Co-Authored-By: Anna-Kyra <144000242+anna-kyra@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://damianr2004.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Damian.png"> </div>
                     <div class="text">
                         <h3> Damian </h3>
@@ -236,7 +236,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://lisavanmansom.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/Schetsen/png/Lisa.png"> </div>
                     <div class="text">
                         <h3> Lisa </h3>
