--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <article>
             <div class="content">
                 <a href="https://abeeryu.github.io/your-tribe-profile-card/ " target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Abeer.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Abeer.png"> </div>
                     <div class="text">
                         <h3> Abeer </h3>
                         <p> Whatever you are, be a good one.</p>
@@ -27,7 +27,7 @@
         <article>
             <div class="content">
                 <a href="https://akikosophia.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Akiko.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Akiko.png"> </div>
                     <div class="text">
                         <h3> Akiko </h3>
                         <p> Life is like a box of chocolates, you never know what you get.</p>
