--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <article>
             <div class="content">
                 <a href="https://anna-kyra.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Anna-Kyra.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Anna-Kyra.png"> </div>
                     <div class="text">
                         <h3> Anna-Kyra </h3>
                         <p> A day without sunshine is like, you know night.</p>
@@ -52,7 +52,7 @@
         <article>
             <div class="content">
                 <a href="https://annelinderaadsheer.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Annelinde.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Annelinde.png"> </div>
                     <div class="text">
                         <h3> Annelinde </h3>
                         <p> Life has no ctrl+z</p>
@@ -63,7 +63,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Charley.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Charley.png"> </div>
                     <div class="text">
                         <h3> Charley </h3>
                         <p> Professional Photographer </p>
@@ -74,7 +74,7 @@
         <article>
             <div class="content">
                 <a href="https://christoph3r3w.github.io/your-tribe-css-basics/#middle" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Christopher.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Christopher.png"> </div>
                     <div class="text">
                         <h3> christopher </h3>
                         <p> Controversieel quote.</p>
@@ -85,7 +85,7 @@
         <article>
             <div class="content">
                 <a href="https://cydstumpel.nl" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Cyd.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Cyd.png"> </div>
                     <div class="text">
                         <h3> Cyd </h3>
                         <p> Jury at Awwwards </p>
@@ -96,7 +96,7 @@
         <article>
             <div class="content">
                 <a href="https://damianr2004.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Damian.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Damian.png"> </div>
                     <div class="text">
                         <h3> Damian </h3>
                         <p> Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters. </p>
@@ -107,7 +107,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/danique.png"> </div>
+                    <div class="foto"> <img src="#"> </div>
                     <div class="text">
                         <h3> Danique </h3>
                         <p> Hier komt een quote. </p>
@@ -118,7 +118,7 @@
         <article>
             <div class="content">
                 <a href="https://gitazeinstra.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Gita.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Gita.png"> </div>
                     <div class="text">
                         <h3> Gita </h3>
                         <p> There is no sunrise so beautiful that it is worth waking me up to see it. </p>
@@ -129,7 +129,7 @@
         <article>
             <div class="content">
                 <a href="https://hadil24a.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Hadil.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Hadil.png"> </div>
                     <div class="text">
                         <h3> Hadil </h3>
                         <p> When you turn and face the sunshine all the shadows fall behind you. </p>
@@ -140,7 +140,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Ilona.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Ilona.png"> </div>
                     <div class="text">
                         <h3> Ilona </h3>
                         <p> Where`s Waldo? </p>
@@ -151,7 +151,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Inez_2.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Inez.png"> </div>
                     <div class="text">
                         <h3> Inez </h3>
                         <p> My mind is like my browser, 19 tabs open and i have no idea where the music is coming from.
@@ -163,7 +163,7 @@
         <article>
             <div class="content">
                 <a href="https://jason2426.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Jason.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Jason.png"> </div>
                     <div class="text">
                         <h3> Jason </h3>
                         <p> They ain`t believe in us. GOD DID. </p>
@@ -174,7 +174,7 @@
         <article>
             <div class="content">
                 <a href="https://ovenmagnetron.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Jesse.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Jesse.png"> </div>
                     <div class="text">
                         <h3> Jesse </h3>
                         <p> Geloof in jezelf </p>
@@ -185,7 +185,7 @@
         <article>
             <div class="content">
                 <a href="https://business.justinberghahn.nl/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Justin.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Justin.png"> </div>
                     <div class="text">
                         <h3> Justin </h3>
                         <p> Learn to love the darkness so we can see ourselves in the light. </p>
@@ -196,7 +196,7 @@
         <article>
             <div class="content">
                 <a href="https://kaankalmi.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Kaan.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Kaan.png"> </div>
                     <div class="text">
                         <h3> Kaan </h3>
                         <p> The world keeps getting hotter, But im too cool to die. </p>
@@ -207,7 +207,7 @@
         <article>
             <div class="content">
                 <a href="https://krijnhoetmer.github.io/fdnd-your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Kiko.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Kiko.png"> </div>
                     <div class="text">
                         <h3> Kiko </h3>
                         <p> Where`s Waldo? </p>
@@ -218,7 +218,7 @@
         <article>
             <div class="content">
                 <a href="https://krijnhoetmer.github.io/fdnd-your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Krijn.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Krijn.png"> </div>
                     <div class="text">
                         <h3> Krijn </h3>
                         <p> Semantic HTML is life </p>
@@ -229,7 +229,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Lemuel.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Lemuel.png"> </div>
                     <div class="text">
                         <h3> Lemuel </h3>
                         <p> I think we all change each other`s path. </p>
@@ -240,7 +240,7 @@
         <article>
             <div class="content">
                 <a href="https://lisavanmansom.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Lisa.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Lisa.png"> </div>
                     <div class="text">
                         <h3> Lisa </h3>
                         <p> Live Love Laugh </p>
@@ -251,7 +251,7 @@
         <article>
             <div class="content">
                 <a href="https://metehan2003.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Metehan.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Metehan.png"> </div>
                     <div class="text">
                         <h3> Metehan </h3>
                         <p> Today is your chance to build tomorrow </p>
@@ -262,7 +262,7 @@
         <article>
             <div class="content">
                 <a href="https://misahsaid.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Misah.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Misah.png"> </div>
                     <div class="text">
                         <h3> Misah </h3>
                         <p> Clients are the difference between design and art. </p>
@@ -273,7 +273,7 @@
         <article>
             <div class="content">
                 <a href="https://vayogj.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Nevayo.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Nevayo.png"> </div>
                     <div class="text">
                         <h3> Nevayo </h3>
                         <p> It`s not about whether i can. I have to do it. </p>
@@ -284,7 +284,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Patrick.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Patrick.png"> </div>
                     <div class="text">
                         <h3> Patrick </h3>
                         <p> Home is where the heart is. </p>
@@ -295,7 +295,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Robby.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Robby.png"> </div>
                     <div class="text">
                         <h3> Robby </h3>
                         <p> I never sleep, cause sleep is the cousin of death. </p>
@@ -306,7 +306,7 @@
         <article>
             <div class="content">
                 <a href="https://ronabundy1.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Ronaldo.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Ronaldo.png"> </div>
                     <div class="text">
                         <h3> Ronaldo </h3>
                         <p> I prefer to reserve time.</p>
@@ -317,7 +317,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/Schetsen/png/Viktor.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Viktor.png"> </div>
                     <div class="text">
                         <h3> Viktor </h3>
                         <p> If you can make her giggle, you can make her cake jiggle. </p>
