--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="#"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Danique.png"> </div>
                     <div class="text">
                         <h3> Danique </h3>
                         <p> Hier komt een quote. </p>
