color palette_Kaan
it do be ugly tho

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://einanas.github.io/your-tribe-profile-card/" target="_blank">
                     <div class="foto"> <img src="assets/ingekleurd/Inez.png"> </div>
                     <div class="text">
                         <h3> Inez </h3>
